fix swagger.yaml et alertes
